@@ -310,8 +310,6 @@ maildirmake.o
 maildirmake
 maildir2mbox.o
 maildir2mbox
-maildirwatch.o
-maildirwatch
 hier.o
 install
 instcheck.o
@@ -373,7 +371,6 @@ bouncesaying.0
 except.0
 maildirmake.0
 maildir2mbox.0
-maildirwatch.0
 qmail.0
 qmail-limits.7
 qmail-limits.0
