@@ -1,23 +1,0 @@
-.TH maildirwatch 1
-.SH NAME
-maildirwatch \- look for new mail in a maildir
-.SH SYNOPSIS
-.B maildirwatch
-.SH DESCRIPTION
-.B maildirwatch
-watches your
-.I maildir
-for new mail.
-You must supply a
-.B MAILDIR
-environment variable
-with the name of your
-.I maildir
-directory.
-
-.B maildirwatch
-prints a new mail summary twice per minute.
-It is designed to run inside a (VT100-compatible) window;
-it clears the window before each summary.
-.SH "SEE ALSO"
-maildir(5)
